--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
   <link rel="stylesheet" href="./js">
   <link rel="stylesheet" href="./fonts/themify-icons/themify-icons.css">
 
-  <!-- Link slick hỗ trợ phần sub slider -->
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 
   <link rel="stylesheet" href="./fonts/fontawesome-free-6.1.1-web/css/all.min.css">
   <!-- Bootstrap CSS v5.0.2 -->
@@ -579,6 +576,115 @@
 
   </div>
 
+  <!-- Sub slider 1 (Mobile) -->
+  <div id="carouselExampleControls " class="carousel slide sub1-mb" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <div class="carousel-item active">
+        <div class="items-sub1">
+
+          <a class="item-sub1" href="">
+            <div class="img-sub1">
+              <img src="./img/home-img/sub1_s901.png" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="gia-sp">
+              <a href="">Galaxy S22-(SM-S901)</a>
+              <p>Giá từ: 20.290.000₫</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="items-sub1">
+
+          <a class="item-sub1" href="">
+            <div class="img-sub1">
+              <img src="./img/home-img/sub1_s906.png" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="gia-sp">
+              <a href="">Galaxy S22+(SM-S906)</a>
+              <p>Giá từ: 24.490.000₫</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="items-sub1">
+          <a class="item-sub1" href="">
+            <div class="img-sub1">
+              <img src="./img/home-img/sub1_s908.png" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="gia-sp">
+              <a href="">Galaxy S22 Ultra-(SM-S908)</a>
+              <p>Giá từ: 28.290.000₫</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="items-sub1">
+          <a class="item-sub1" href="">
+            <div class="img-sub1">
+              <img src="./img/home-img/sub1_x706.png" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="gia-sp">
+              <a href="">Galaxy S22 Ultra-(SM-S908)</a>
+              <p>Giá từ: 19.990.000₫</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="items-sub1">
+          <a class="item-sub1" href="">
+            <div class="img-sub1">
+              <img src="./img/home-img/sub1_x806.png" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="gia-sp">
+              <a href="">Galaxy S22 Ultra-(SM-S908)</a>
+              <p>Giá từ: 24.290.000₫</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="items-sub1">
+          <a class="item-sub1" href="">
+            <div class="img-sub1">
+              <img src="./img/home-img/sub1_x906.png" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="gia-sp">
+              <a href="">Galaxy S22 Ultra-(SM-S908)</a>
+              <p>Giá từ: 28.990.000₫</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
   <!--End sub slider 1 -->
 
   <div class="text-sub text-center">
@@ -587,6 +693,7 @@
   </div>
 
   <!-- sub slider 2 -->
+
   <div class="sub-slider2">
 
     <div class="list-sub2">
@@ -615,8 +722,49 @@
       </h3>
 
     </div>
-
   </div>
+  <!-- sub slider 2 mobile -->
+  <div class="sub2-mb">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/slider/sub2/place1.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider/sub2/place2.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider/sub2/place3.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider/sub2/place4.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider/sub2/place5.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider/sub2/place6.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider/sub2/place7.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+
+
+
   <!--End sub slider 2 -->
 
   <!-- End content-->
@@ -725,13 +873,6 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" -->
   <!-- crossorigin="anonymous"></script> -->
   <script src="./js/jas.js"></script>
-
-  <!-- Slick js -->
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-  <!-- End slick js -->
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
