--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <img src="./img/phone/galaxyZ.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
           <div class="text_list" style="margin-top: 20px">
             <div class="text_list1">
-              <a href="#" style="font-size: 16px; top: -8px;">Galaxy Z</a>
+              <a href="./pages/Mobile/galaxyZ.html" style="font-size: 16px; top: -8px;">Galaxy Z</a>
 
             </div>
             <div class="text_list2">
@@ -468,19 +468,19 @@
 
         <div class="item active">
           <a href="#">
-            <img src="./img/slider/slider1.png" alt="" style="width:100%;">
+            <img src="./img/slider/slider1.jpg" alt="" style="width:100%;">
           </a>
         </div>
 
         <div class="item">
           <a href="#">
-            <img src="./img/slider/slider2.png" alt="" style="width:100%;">
+            <img src="./img/slider/slider2.jpg" alt="" style="width:100%;">
           </a>
         </div>
 
         <div class="item">
           <a href="">
-            <img src="./img/slider/slider3.png" alt="" style="width:100%;">
+            <img src="./img/slider/slider3.jpg" alt="" style="width:100%;">
           </a>
         </div>
 
