--- a/pages/address.html
+++ b/pages/address.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+  <title>Hệ thống chi nhánh - SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
