fixbug page Galaxy Z

--- a/pages/address.html
+++ b/pages/address.html
@@ -60,7 +60,7 @@
                     Di động
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">Galaxy Z</a></li>
+                    <li><a class="dropdown-item" href="../pages/Mobile/galaxyZ.html">Galaxy Z</a></li>
                     <li><a class="dropdown-item" href="#">Galaxy S</a></li>
                     <li><a class="dropdown-item" href="#">Galaxy A</a></li>
                     <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
@@ -176,7 +176,7 @@
 
   <!-- tabs control -->
 
-  <div class="tabs-control">
+  <div class="tabs-control" >
     <!-- nav-tabs -->
     <div class="nav-tabs">
       <div class="mobile nav-tab">
@@ -458,7 +458,7 @@
   <!-- End header -->
 
   <!-- Content -->
-<div class="label-samcenter text-center font-weight-bold text-wrap">
+<div class="label-samcenter text-center font-weight-bold text-wrap"  style="margin-top: 25%;">
     <h2 style="font-size: 50px; line-height: 62px;">Hệ thống cửa hàng SamCenter</h2>
 </div>
 
