--- a/pages/Mobile/galaxyS.html
+++ b/pages/Mobile/galaxyS.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Galaxy Z -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Galaxy S -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../css/reponsive.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/mobile-css/galaxyZ.css">
+    <link rel="stylesheet" href="../../css/mobile-css/galaxyS.css">
+    <!-- <link rel="stylesheet" href="../../css/mobile-css/galaxyS.css"> -->
     <link rel="stylesheet" href="../../img/">
     <link rel="stylesheet" href="../../fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="../../fonts/fontawesome-free-6.1.1-web/css/all.min.css">
@@ -57,8 +58,10 @@
                                         Di động
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="../../pages/Mobile/galaxyZ.html">Galaxy Z</a></li>
-                                        <li><a class="dropdown-item" href="../../pages/Mobile/galaxyS.html">Galaxy S</a></li>
+                                        <li><a class="dropdown-item" href="../../pages/Mobile/galaxyZ.html">Galaxy Z</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="../../pages/Mobile/galaxyS.html">Galaxy S</a>
+                                        </li>
                                         <li><a class="dropdown-item" href="#">Galaxy A</a></li>
                                         <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                                     </ul>
@@ -473,8 +476,8 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2 style="font-weight:720; font-size: 32px ">Galaxy Z</h2>
-                <p style="font-size: 16px;">Mở ra tiềm năng công nghệ mới mang đến trải nghiệm hoàn toàn khác biệt.</p>
+                <h2 style="font-weight:720; font-size: 32px ">Galaxy S</h2>
+                <p style="font-size: 14px;">Được tạo ra để mang lại sự hoành tráng mỗi ngày</p>
             </div>
         </div>
     </div>
@@ -482,15 +485,15 @@
     <div class="lists-phone">
         <a href="">
 
-            <div class="list-phone">
+            <div class="list-phone" style="width: 276px; height: 355px;"  style="width: 276px; height: 355px;">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyZ/F711.jpg" alt="">
+                    <img src="../../img/phone/page-phone/galaxyS/G780.jpg" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy Z Flip3 5G - (SM-F711)</p>
-                        <p class="cost-phone mt-3 mb-3 ">Giá từ: 19.990.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy S20 FE - (G780) - TBH</p>
+                        <p class="cost-phone mt-3 mb-3 ">Giá từ: 10.490.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -503,15 +506,99 @@
 
         <a href="">
 
-            <div class="list-phone">
+            <div class="list-phone"  style="width: 276px; height: 355px;">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyZ/F926.jpg" alt="">
+                    <img src="../../img/phone/page-phone/galaxyS/S908.jpg" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy Z Flip3 5G - (SM-F711)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 19.990.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy S22 Ultra - (SM-S908)</p>
+                        <p class="cost-phone mt-3 mb-3">Giá từ: 26.790.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone"  style="width: 276px; height: 355px;">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/galaxyS/S906.jpg" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy S22+ (SM-S906)</p>
+                        <p class="cost-phone mt-3 mb-3">Giá từ: 23.390.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone"  style="width: 276px; height: 355px;">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/galaxyS/S901.jpg" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy S22 - (SM-S901)</p>
+                        <p class="cost-phone mt-3 mb-3">Giá từ: 18.190.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone"  style="width: 276px; height: 355px;">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/galaxyS/G990.jpg" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy S21 FE 5G - (SM-G990)</p>
+                        <p class="cost-phone mt-3 mb-3">Giá từ: 12.690.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone"  style="width: 276px; height: 355px;">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/galaxyS/G780.jpg" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy S20 FE - (G780)</p>
+                        <p class="cost-phone mt-3 mb-3">Giá từ: 11.490.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
