--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     Di động
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">Galaxy Z</a></li>
-                    <li><a class="dropdown-item" href="#">Galaxy S</a></li>
+                    <li><a class="dropdown-item" href="./pages/Mobile/galaxyZ.html">Galaxy Z</a></li>
+                    <li><a class="dropdown-item" href="./pages/Mobile/galaxyZ.html">Galaxy S</a></li>
                     <li><a class="dropdown-item" href="#">Galaxy A</a></li>
                     <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                   </ul>
@@ -211,7 +211,7 @@
             <img src="./img/phone/galaxyS.png" alt="" style="width: 48px; height: 86px; margin: 5px 8px;">
             <div class="text_list" style="margin-top: 20px">
               <div class="text_list1">
-                <a href="#" style="font-size: 16px; top: -8px;">Galaxy S</a>
+                <a href="./pages/Mobile/galaxyS.html" style="font-size: 16px; top: -8px;">Galaxy S</a>
               </div>
               <div class="text_list2">
                 <p style="width: 182px;">Bộ xử lý nhanh nhất và camera tốt nhất của chúng tôi</p>
