--- a/pages/Mobile/galaxyS.html
+++ b/pages/Mobile/galaxyS.html
@@ -124,11 +124,11 @@
                                 </div>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link disabled text-center">Hệ thông của hàng</a>
-                            </li>
-
+                            <!-- <li class="nav-item">
+                            </li> -->
+                            
                         </ul>
+                        <a class="nav-link disabled text-center" href="../address.html">Hệ thống cửa hàng</a>
 
                     </div>
                 </div>
@@ -148,7 +148,7 @@
         <div class="menu-nav">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link adress" href="#">
+                    <a class="nav-link adress" href="../address.html">
                         <i class="ti-location-arrow"></i>
                         địa chỉ
                     </a>
@@ -485,7 +485,7 @@
     <div class="lists-phone">
         <a href="">
 
-            <div class="list-phone" style="width: 276px; height: 355px;"  style="width: 276px; height: 355px;">
+            <div class="list-phone" >
                 <div class="img-phone text-center">
                     <img src="../../img/phone/page-phone/galaxyS/G780.jpg" alt="">
                 </div>
@@ -506,7 +506,7 @@
 
         <a href="">
 
-            <div class="list-phone"  style="width: 276px; height: 355px;">
+            <div class="list-phone" >
                 <div class="img-phone text-center">
                     <img src="../../img/phone/page-phone/galaxyS/S908.jpg" alt="">
                 </div>
@@ -527,7 +527,7 @@
 
         <a href="">
 
-            <div class="list-phone"  style="width: 276px; height: 355px;">
+            <div class="list-phone"  >
                 <div class="img-phone text-center">
                     <img src="../../img/phone/page-phone/galaxyS/S906.jpg" alt="">
                 </div>
@@ -548,7 +548,7 @@
 
         <a href="">
 
-            <div class="list-phone"  style="width: 276px; height: 355px;">
+            <div class="list-phone"  >
                 <div class="img-phone text-center">
                     <img src="../../img/phone/page-phone/galaxyS/S901.jpg" alt="">
                 </div>
@@ -569,7 +569,7 @@
 
         <a href="">
 
-            <div class="list-phone"  style="width: 276px; height: 355px;">
+            <div class="list-phone"  >
                 <div class="img-phone text-center">
                     <img src="../../img/phone/page-phone/galaxyS/G990.jpg" alt="">
                 </div>
@@ -590,7 +590,7 @@
 
         <a href="">
 
-            <div class="list-phone"  style="width: 276px; height: 355px;">
+            <div class="list-phone"  >
                 <div class="img-phone text-center">
                     <img src="../../img/phone/page-phone/galaxyS/G780.jpg" alt="">
                 </div>
@@ -656,7 +656,7 @@
                 <ul>
                     <li><a href="#">Giới thiệu</a></li>
                     <li><a href="#">Khuyến mại</a></li>
-                    <li><a href="#">Hệ thống cửa hàng</a></li>
+                    <li><a href="../address.html">Hệ thống cửa hàng</a></li>
                     <li><a href="#">Hướng dẫn mua hàng</a></li>
                     <li><a href="#">Phương thức thanh toán</a></li>
                 </ul>
