--- a/pages/Mobile/galaxyZ.html
+++ b/pages/Mobile/galaxyZ.html
@@ -145,7 +145,7 @@
         <div class="menu-nav">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link adress" href="#">
+                    <a class="nav-link adress" href="../address.html">
                         <i class="ti-location-arrow"></i>
                         địa chỉ
                     </a>
