--- a/pages/address.html
+++ b/pages/address.html
@@ -202,7 +202,7 @@
           <img src="../img/phone/galaxyZ.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
           <div class="text_list" style="margin-top: 20px">
             <div class="text_list1">
-              <a href="#" style="font-size: 16px; top: -8px;">Galaxy Z</a>
+              <a href="../pages/Mobile/galaxyZ.html" style="font-size: 16px; top: -8px;">Galaxy Z</a>
 
             </div>
             <div class="text_list2">
@@ -214,7 +214,7 @@
             <img src="../img/phone/galaxyS.png" alt="" style="width: 48px; height: 86px; margin: 5px 8px;">
             <div class="text_list" style="margin-top: 20px">
               <div class="text_list1">
-                <a href="#" style="font-size: 16px; top: -8px;">Galaxy S</a>
+                <a href="../pages/Mobile/galaxyS.html" style="font-size: 16px; top: -8px;">Galaxy S</a>
               </div>
               <div class="text_list2">
                 <p style="width: 182px;">Bộ xử lý nhanh nhất và camera tốt nhất của chúng tôi</p>
@@ -458,7 +458,7 @@
   <!-- End header -->
 
   <!-- Content -->
-<div class="label-samcenter text-center font-weight-bold text-wrap"  style="margin-top: 25%;">
+<div class="label-samcenter text-center font-weight-bold text-wrap"  style="margin-top: 20%;">
     <h2 style="font-size: 50px; line-height: 62px;">Hệ thống cửa hàng SamCenter</h2>
 </div>
 
