Update Phu kien Di Dong

--- a/pages/Mobile/phuKienMB.html
+++ b/pages/Mobile/phuKienMB.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../css/reponsive.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/mobile-css/galaxyA.css">
+    <link rel="stylesheet" href="../../css/mobile-css/phuKienMB.css">
     <!-- <link rel="stylesheet" href="../../css/mobile-css/galaxyS.css"> -->
     <link rel="stylesheet" href="../../img/">
     <link rel="stylesheet" href="../../fonts/themify-icons/themify-icons.css">
@@ -484,7 +484,7 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2>Galaxy A53 5G</h2>
+                <h2 style="text-transform: capitalize">Phụ kiện <br> điện thoại thông minh</h2>
                 <!-- <p style="font-size: 14px;">Được tạo ra để mang lại sự hoành tráng mỗi ngày</p> -->
             </div>
         </div>
@@ -495,13 +495,26 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A336.png" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/backup-charger.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A33 5G - (SM-A336)</p>
-                        <p class="cost-phone mt-3 mb-3 ">Giá từ: 7.190.000₫</p>
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 200px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 34px;">
+                            Sạc dự phòng <br>Samsung10.000mAh (Hồng, type C)</p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
+                                <p class="cost-phone mt-3 mb-3">350.000₫ </p>
+                            </div>
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 "> 319.000₫</p>
+                            </div>
+                        </div>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -516,13 +529,22 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A736.jpg" alt="">
-                </div>
+                    <img src="../../img/phone/page-phone/phuKienMB/S22.png" alt="">                </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A73 5G - (SM-A736)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 10.290.000₫</p>
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Ốp lưng Silicone kèm dây đeo <br> Galaxy S22 5G</p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 " style="margin-left:24px ;"> 499.000₫</p>
+                            </div>
+                        </div>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -537,13 +559,26 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A135.png" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/screen-protector.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A13 - (SM-A135)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 3.890.000₫</p>
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Miếng dán màn hình Galaxy <br> S22+ 5G   </p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
+                                <p class="cost-phone mt-3 mb-3">250.000₫ </p>
+                            </div>
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 "> 249.000₫</p>
+                            </div>
+                        </div>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -558,13 +593,23 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A235.png" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/screen-protector.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A23 - (SM-A235)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 5.290.000₫</p>
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Miếng dán màn hình Galaxy <br> S22 Ultra 5G   </p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 " style="margin-left:28px ;"> 299.000₫</p>
+                            </div>
+                        </div>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -579,13 +624,26 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A536.jpg" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/screen-protector.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A53 5G - (SM-A536)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 8.690.000₫</p>
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Miếng dán màn hình Galaxy <br> S22 5G   </p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
+                                <p class="cost-phone mt-3 mb-3">250.000₫ </p>
+                            </div>
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 "> 199.000₫</p>
+                            </div>
+                        </div>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -600,13 +658,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A035.jpg" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/Fold3-5G.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A03 - (SM-A035)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 2.690.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Bao da Clear View S22 5G</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">990.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -621,13 +679,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A525.jpg" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/Fold3-5G.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A52 - (SM-A525)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 7.290.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Bao da Galaxy S22 5G</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">990.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -642,13 +700,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A325.jpg" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/15W-typeC.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A32 LTE - (A325)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 5.990.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Bộ sạc 15W Type C</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">290.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -664,13 +722,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A528.jpg" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/25W.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A52s - (SM-A528)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 7.890.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Bộ sạc nhanh 25W</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3"> 390.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -685,13 +743,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyA/A225.jpg" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/FE-5G-ClearCover.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy A22 LTE - (SM-A225)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 4.790.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy S21 FE 5G Clear Cover</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">790.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
