--- a/pages/Tablet/tabS.html
+++ b/pages/Tablet/tabS.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Galaxy Z -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Galaxy Tab S -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../css/reponsive.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/mobile-css/galaxyZ.css">
+    <link rel="stylesheet" href="../../css/tablet-css/tabS.css">
     <link rel="stylesheet" href="../../img/">
     <link rel="stylesheet" href="../../fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="../../fonts/fontawesome-free-6.1.1-web/css/all.min.css">
@@ -81,7 +81,7 @@
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="#">Galaxy Tab A</a></li>
-                                        <li><a class="dropdown-item" href="../Tablet/tabS.html">Galaxy Tab S</a></li>
+                                        <li><a class="dropdown-item" href="./tabS.html">Galaxy Tab S</a></li>
                                         <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                                     </ul>
                                 </div>
@@ -268,7 +268,7 @@
                         style="width: 60px; height: 82px; margin:8px 5px 4px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="../Tablet/tabS.html" style="font-size: 16px; top: -8px;">Galaxy Tab S</a>
+                            <a href="#" style="font-size: 16px; top: -8px;">Galaxy Tab S</a>
 
                         </div>
                         <div class="text_list2">
@@ -482,8 +482,8 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2 style="font-weight:720; font-size: 32px ">Galaxy Z</h2>
-                <p style="font-size: 16px;">Mở ra tiềm năng công nghệ mới mang đến trải nghiệm hoàn toàn khác biệt.</p>
+                <h2>Galaxy Tab S8</h2>
+                <p style="font-size: 16px;">Chuẩn mực cho máy tính.</p>
             </div>
         </div>
     </div>
@@ -493,13 +493,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyZ/F711.jpg" alt="">
+                    <img src="../../img/tab/page-tablet/tabS/x906.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy Z Flip3 5G - (SM-F711)</p>
-                        <p class="cost-phone mt-3 mb-3 ">Giá từ: 19.990.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy Tab S8 Ultra - (SM-X906)</p>
+                        <p class="cost-phone mt-3 mb-3 ">29.440.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -514,13 +514,76 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/galaxyZ/F926.jpg" alt="">
+                    <img src="../../img/tab/page-tablet/tabS/x806.jpg" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Galaxy Z Flip3 5G - (SM-F711)</p>
-                        <p class="cost-phone mt-3 mb-3">Giá từ: 19.990.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy Tab S8+ (SM-X806)</p>
+                        <p class="cost-phone mt-3 mb-3">24.690.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/tab/page-tablet/tabS/x706.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy Tab S8 - (SM-X706)</p>
+                        <p class="cost-phone mt-3 mb-3">19.940.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/tab/page-tablet/tabS/tabS7.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy Tab S7+ WiFi 12.4"</p>
+                        <p class="cost-phone mt-3 mb-3">20.990.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/tab/page-tablet/tabS/T735.jpg" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Galaxy Tab S7 FE - (SM-T735)</p>
+                        <p class="cost-phone mt-3 mb-3">13.290.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
