--- a/pages/address.html
+++ b/pages/address.html
@@ -78,7 +78,7 @@
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="#">Galaxy Tab A</a></li>
-                    <li><a class="dropdown-item" href="#">Galaxy Tab S</a></li>
+                    <li><a class="dropdown-item" href="../pages/Tablet/tabS.html">Galaxy Tab S</a></li>
                     <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                   </ul>
                 </div>
@@ -259,7 +259,7 @@
           <img src="../img/tab/galaxy_tabS.png" alt="" style="width: 60px; height: 82px; margin:8px 5px 4px 8px;">
           <div class="text_list" style="margin-top: 20px">
             <div class="text_list1">
-              <a href="#" style="font-size: 16px; top: -8px;">Galaxy Tab S</a>
+              <a href="../pages/Tablet/tabS.html" style="font-size: 16px; top: -8px;">Galaxy Tab S</a>
 
             </div>
             <div class="text_list2">
