--- a/pages/Mobile/galaxyS.html
+++ b/pages/Mobile/galaxyS.html
@@ -80,7 +80,7 @@
                                         Máy tính bảng
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Galaxy Tab A</a></li>
+                                        <li><a class="dropdown-item" href="../Tablet/tabA.html">Galaxy Tab A</a></li>
                                         <li><a class="dropdown-item" href="../Tablet/tabS.html">Galaxy Tab S</a></li>
                                         <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                                     </ul>
@@ -282,7 +282,7 @@
                             style="width: 56px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Galaxy Tab A</a>
+                                <a href="../Tablet/tabA.html" style="font-size: 16px; top: -8px;">Galaxy Tab A</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Nhẹ và cơ động với thiết kế mỏng</p>
