--- a/pages/Tablet/tabS.html
+++ b/pages/Tablet/tabS.html
@@ -63,12 +63,12 @@
                                         Di động
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="./galaxyZ.html">Galaxy Z</a>
+                                        <li><a class="dropdown-item" href="../Mobile/galaxyZ.html">Galaxy Z</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="./galaxyS.html">Galaxy S</a>
+                                        <li><a class="dropdown-item" href="../Mobile/galaxyS.html">Galaxy S</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="./galaxyA.html">Galaxy A</a></li>
-                                        <li><a class="dropdown-item" href="./phuKienMB.html">Phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="../Mobile/galaxyA.html">Galaxy A</a></li>
+                                        <li><a class="dropdown-item" href="../Mobile/phuKienMB.html">Phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -80,7 +80,7 @@
                                         Máy tính bảng
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Galaxy Tab A</a></li>
+                                        <li><a class="dropdown-item" href="./tabA.html">Galaxy Tab A</a></li>
                                         <li><a class="dropdown-item" href="./tabS.html">Galaxy Tab S</a></li>
                                         <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                                     </ul>
@@ -207,7 +207,7 @@
                     <img src="../../img/phone/galaxyZ.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="./galaxyZ.html" style="font-size: 16px; top: -8px;">Galaxy Z</a>
+                            <a href="../Mobile/galaxyZ.html" style="font-size: 16px; top: -8px;">Galaxy Z</a>
 
                         </div>
                         <div class="text_list2">
@@ -220,7 +220,7 @@
                             style="width: 48px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./galaxyS.html" style="font-size: 16px; top: -8px;">Galaxy
+                                <a href="../Mobile/galaxyS.html" style="font-size: 16px; top: -8px;">Galaxy
                                     S</a>
                             </div>
                             <div class="text_list2">
@@ -234,7 +234,7 @@
                             style="width: 48px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./galaxyA.html" style="font-size: 16px; top: -8px;">Galaxy A</a>
+                                <a href="../Mobile/galaxyA.html" style="font-size: 16px; top: -8px;">Galaxy A</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Những đổi mới của Galaxy đã giúp tất cả mọi người dễ tiếp cận
@@ -248,7 +248,7 @@
                             style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./phuKienMB.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                                <a href="../Mobile/phuKienMB.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
 
                             </div>
                             <div class="text_list2">
@@ -281,7 +281,7 @@
                             style="width: 56px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Galaxy Tab A</a>
+                                <a href="./tabA.html" style="font-size: 16px; top: -8px;">Galaxy Tab A</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Nhẹ và cơ động với thiết kế mỏng</p>
