update tab  tablet

--- a/pages/Tablet/phukienTab.html
+++ b/pages/Tablet/phukienTab.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Phụ kiện điện thoại thông minh -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Phụ kiện máy tính bảng -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -484,7 +484,7 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2 style="text-transform: capitalize">Phụ kiện máy tín bảng</h2>
+                <h2 style="text-transform: capitalize">Phụ kiện máy tính bảng</h2>
                 <!-- <p style="font-size: 14px;">Được tạo ra để mang lại sự hoành tráng mỗi ngày</p> -->
             </div>
         </div>
