fix page tablet

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="./pages/Tablet/tabA.html">Galaxy Tab A</a></li>
                     <li><a class="dropdown-item" href="./pages/Tablet/tabS.html">Galaxy Tab S</a></li>
-                    <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
+                    <li><a class="dropdown-item" href="./pages/Tablet/phukienTab.html">Phụ kiện</a></li>
                   </ul>
                 </div>
               </li>
@@ -122,7 +122,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled text-center">Hệ thông của hàng</a>
+                <a class="nav-link disabled text-center" href="./pages/address.html">Hệ thông của hàng</a>
               </li>
 
             </ul>
@@ -278,7 +278,7 @@
             <img src="./img/tab/phu_kien_tab.png" alt="" style="width: 68px; height: 86px;  margin: 5px 8px;">
             <div class="text_list" style="margin-top: 20px">
               <div class="text_list1">
-                <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                <a href="./pages/Tablet/phukienTab.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
               </div>
               <div class="text_list2">
                 <p style="width: 200px">Bao da và hơn thế nữa</p>
@@ -290,7 +290,7 @@
             <img src="./img/tab/all_tab.png" alt="" style="width: 88px; height: 86px; margin: 5px 8px;">
             <div class="text_list" style="margin-top: 20px">
               <div class="text_list1">
-                <a href="#" style="font-size: 16px; top: -8px;">Xem tất cả</a>
+                <a href="./pages/Tablet/allTab.html" style="font-size: 16px; top: -8px;">Xem tất cả</a>
 
               </div>
               <div class="text_list2">
