--- a/pages/Tablet/phukienTab.html
+++ b/pages/Tablet/phukienTab.html
@@ -83,7 +83,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="../Tablet/tabA.html">Galaxy Tab A</a></li>
                                         <li><a class="dropdown-item" href="../Tablet/tabS.html">Galaxy Tab S</a></li>
-                                        <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="./phukienTab.html">Phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -296,7 +296,7 @@
                             style="width: 68px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                                <a href="./phukienTab.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Bao da và hơn thế nữa</p>
@@ -308,7 +308,7 @@
                         <img src="../../img/tab/all_tab.png" alt="" style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Xem tất cả</a>
+                                <a href="./allTab.html" style="font-size: 16px; top: -8px;">Xem tất cả</a>
 
                             </div>
                             <div class="text_list2">
