--- a/pages/Tablet/allTab.html
+++ b/pages/Tablet/allTab.html
@@ -308,7 +308,7 @@
                         <img src="../../img/tab/all_tab.png" alt="" style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Xem tất cả</a>
+                                <a href="./allTab.html" style="font-size: 16px; top: -8px;">Xem tất cả</a>
 
                             </div>
                             <div class="text_list2">
