--- a/pages/Tablet/tabA.html
+++ b/pages/Tablet/tabA.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Galaxy Tab S -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Galaxy Tab A -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
