--- a/manage/category_manage.html
+++ b/manage/category_manage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản Lý sản phẩm</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style_manage.css">
     <script src="./js/js.js"></script>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -23,7 +23,7 @@
                     <a href="./manage.html">Quản lý sản phẩm</a>
                 </li>
                 <li>
-                    <a href="./single_manage.html">Quản lý đơn hàng</a>
+                    <a href="./SingleMenu_manage.html">Quản lý đơn hàng</a>
                 </li>
                 <li>
                     <a href="./account_manage.html">Quản lý tài khoản</a>
