--- a/manage/SingleMenu_manage.html
+++ b/manage/SingleMenu_manage.html
@@ -26,7 +26,7 @@
                     <a href="./SingleMenu_manage.html">Quản lý đơn hàng</a>
                 </li>
                 <li>
-                    <a href="./account_manage.html">Quản lý tài khoản</a>
+                    <a href="./account_manage.html">Quản lý thông tin khách hàng</a>
                 </li>
                 <li>
                     <a href="./category_manage.html">Quản lý danh mục</a>
