--- a/manage/account_manage.html
+++ b/manage/account_manage.html
@@ -26,7 +26,7 @@
                     <a href="./SingleMenu_manage.html">Quản lý đơn hàng</a>
                 </li>
                 <li>
-                    <a href="./account_manage.html">Quản lý tài khoản</a>
+                    <a href="./account_manage.html">Quản lý thông tin khách hàng</a>
                 </li>
                 <li>
                     <a href="./category_manage.html">Quản lý danh mục</a>
@@ -102,6 +102,203 @@
                       </ul>
                   </td>
                   </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>1223</td>
+                    <td>Nguyễn Văn An</td>
+                    <td>458 Phố Minh Khai, Khu đô thị Times City, Vĩnh Tuy, Hai Bà Trưng, Hà Nội </td>
+                    <td>0328 858 198</td>
+                    <td>nguyenThang2002@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>12283</td>
+                    <td>Nguyễn Thị Cúc</td>
+                    <td>97 Phố Triều Khúc, Triều Khúc, Tân Triều, Thanh Trì, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenCuc@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
+                    <td>12258</td>
+                    <td>Nguyễn Thị Hồng</td>
+                    <td>373 Phố Ngô Quyền, Phan Chu Trinh, Hoàn Kiếm, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>HongNguyen2@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">7</th>
+                    <td>12283</td>
+                    <td>Đinh văn Tuyến</td>
+                    <td>57 Phố Bùi Thị Xuân, Bùi Thị Xuân, Hai Bà Trưng, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>Heocon99@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">8</th>
+                    <td>1228</td>
+                    <td>Nguyễn Văn Cu</td>
+                    <td>68 Phố Triều Khúc, Triều Khúc, Tân Triều, Thanh Trì, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>ConcuNho02@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">9</th>
+                    <td>1237</td>
+                    <td>Nguyễn Đích Nhân</td>
+                    <td>458 Phố Minh Khai, Khu đô thị Times City, Vĩnh Tuy, Hai Bà Trưng, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyen02@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">10</th>
+                    <td>1274</td>
+                    <td>Nguyễn Thị Cúc</td>
+                    <td>357 Nguyễn Khoái, Lĩnh Nam, Hoàng Mai, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenCuc2002@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">11</th>
+                    <td>1429</td>
+                    <td>Hoàng Văn Anh</td>
+                    <td>47 Phố Bùi Thị Xuân, Bùi Thị Xuân, Hai Bà Trưng, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>VanAnh1999@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">12</th>
+                    <td>1072</td>
+                    <td>Nguyễn Văn Đức</td>
+                    <td>85 Nguyễn Khoái, Lĩnh Nam, Hoàng Mai, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>HoangDuc@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">13</th>
+                    <td>1372</td>
+                    <td>Nguyễn Hoàng Anh</td>
+                    <td>58 Phố Minh Khai, Vĩnh Tuy, Hai Bà Trưng, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenhoanganh@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">14</th>
+                    <td>1246</td>
+                    <td>Nguyễn Bi</td>
+                    <td>37 Phố Ngô Quyền, Phan Chu Trinh, Hoàn Kiếm, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenBi96@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">15</th>
+                    <td>1342</td>
+                    <td>Nguyễn Anh</td>
+                    <td>Ngõ 5</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenAnh@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">16</th>
+                    <td>1362</td>
+                    <td>Đinh Văn Tín</td>
+                    <td>785 Nguyễn Khoái, Lĩnh Nam, Hoàng Mai, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenTin02@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">17</th>
+                    <td>1246</td>
+                    <td>Nguyễn Đình Thắng</td>
+                    <td>45 Phố Minh Khai, Vĩnh Tuy, Hai Bà Trưng, Hà Nội</td>
+                    <td>0328 858 198</td>
+                    <td>nguyenThang2002@gmail.com</td>
+                    <td>
+                      <ul class="" id="">
+                        <li><div data-toggle="modal" data-target="#confirmModal" class="delete" onclick="showModalDeleteLocation('002')">Xoá</div></li>
+                        <li><a href="#">Sửa </a></li>
+                      </ul>
+                  </td>
+                  </tr>
+
                 </tbody>
               </table>
         </div>
