update button search by Thang

--- a/manage/manage.html
+++ b/manage/manage.html
@@ -20,9 +20,9 @@
                 </h3>
             </div>
             <div class="list-page" style="color: #fff; ">
-                <p>
+                <!-- <p>
                     <a href="/WebSamCenter/index.html" style="text-decoration: none">Trang chủ</a>
-                </p>
+                </p> -->
                 <li class="active">
                     <a href="./manage.html">Quản lý sản phẩm</a>
                 </li>
@@ -36,7 +36,7 @@
                     <a href="./category_manage.html">Quản lý danh mục</a>
                 </li>
                 <li>
-                    <a href="/WebSamCenter/index.html">Về trang chủ</a>
+                    <a href="../index.html">Về trang chủ</a>
                 </li>
             </div>
         </div>
@@ -46,7 +46,7 @@
                 <span class="input-group-btn">
                   <button class="btn button-search mx-2" onclick="findTour()" type="button">Tìm kiếm</button>
                 </span>
-                <a href="./them-tour.html" class=" btn btn-primary mx-2">Thêm </a>
+                <!-- <a href="./them-tour.html" class=" btn btn-primary mx-2">Thêm </a> -->
                 <!-- <a href="./sua-dia-danh.html" class=" btn btn-danger mx-2">Xoá </a> -->
             </div>
             <div class="alert alert-success" id="ThongBao"></div>
