--- a/pages/Tablet/tabS.html
+++ b/pages/Tablet/tabS.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Galaxy Tab S -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Galaxy Tab S - SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -159,8 +159,8 @@
                     </a>
                 </li>
                 <li class="nav-item icon-sreach">
-                    <a class="nav-link" href="#">
-                        <i class="ti-search"></i>
+                    <a class="nav-link button-search" href="#">
+                      <i class="ti-search"></i>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -178,7 +178,13 @@
         </div>
     </div>
 
-
+    <div class="form-search"style="background-color: rgba(0,0,0,0.8);" >            
+        <form class="example text-name" action="/action_page.php">
+          <input type="text" placeholder="Search.." name="search" class="input" style="color:#fff ;background-color: transparent;border: none;">
+          <button type="submit"></button>
+        
+        </form>
+    </div>
     <!-- tabs control -->
 
     <div class="tabs-control">
@@ -488,7 +494,7 @@
         </div>
     </div>
 
-    <div class="lists-phone">
+    <div class="lists-phone show-search">
         <a href="">
 
             <div class="list-phone">
@@ -702,6 +708,7 @@
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
     <script src="../../js/jas.js"></script>
+    <script src="../../js/search.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
