--- a/index.html
+++ b/index.html
@@ -144,32 +144,45 @@
     </div>
     <div class="menu-nav">
       <ul class="nav nav-pills">
+
         <li class="nav-item">
           <a class="nav-link adress" href="./pages/address.html">
             <i class="ti-location-arrow"></i>
             địa chỉ
           </a>
         </li>
+
         <li class="nav-item icon-sreach">
-          <a class="nav-link" href="#">
+          <a class="nav-link button-search" href="#">
             <i class="ti-search"></i>
           </a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#">
             <i class="ti-shopping-cart"></i>
           </a>
         </li>
+
         <div class="phone-number">
           <a class="nav-link" href="#">
             <i class="ti-mobile"></i>
             1800 4886
           </a>
         </div>
+
       </ul>
+
     </div>
+
   </div>
 
+  <div class="form-search">            
+    <form class="example text-name" action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"></button>
+    </form>
+  </div>
 
   <!-- tabs control -->
 
@@ -888,6 +901,7 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" -->
   <!-- crossorigin="anonymous"></script> -->
   <script src="./js/jas.js"></script>
+  <!-- <script src="./js/search.js"></script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
